# decorator

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: build.yml  ci.yml
scripts/: auto_version.sh  bump_version.py
src/: app.rs  ascii_frames_viewer.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: main.css
src/styles/base/: reset.css
src/styles/components/: ascii-viewer.css  buttons.css  drop-zone.css  inputs.css
src/styles/layout/: container.css
