[package]
name = "decorator-ui"
version = "0.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "FileList", "File", "Element", "HtmlInputElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlAudioElement", "HtmlMediaElement", "Window"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3"
cascii-core-view = { git = "https://github.com/cascii/cascii-core-view.git", features = ["serde", "web"] }
yew_icons = { version = "0.8.0", features = [
    "LucidePlay",
    "LucidePause",
    "LucideSkipForward",
    "LucideBrush",
    "LucidePencil",
    "LucidePaintbrush",
    "LucideVolume2",
    "LucideVolumeX",
    "LucideXCircle",
    "LucideEye",
    "LucideEyeOff"
] }

[workspace]
members = ["src-tauri"]
